--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Ana yapılarımın içinde bulunacağı container class ı oluşturalım -->
+    <div class="container">
+        <!-- Sayfanın dört bölümden oluştuğunu gözlemledim o yüzden 4 alt class oluşturalım -->
+        <!-- Google resim bulunan class -->
+        <div class="content">
+            <img style="display: block; margin: auto;" src="img/google.jpg" alt="Google">
+        </div>
+        <!-- Google arama kutusu ve arama butonlarının olduğu class -->
+        <div style="text-align: center; background-color:#EEEEEE;" class="content">
+            Search the web using Google! <br>
+            <input type="text" size="40"> <br>
+            <input type="button" value="Google Search">
+            <input type="button" value="I'm feeling lucy">
+        </div>
+        <!-- Link lerin olduğu üç kutulu bölüm (altına üç ayrı class oluşturalım) -->
+        <div class="content">
+            <div class="card-1">
+                Special Searches <br>
+                <a href="">Standford Search</a> <br>
+                <a href="">Linux Search</a>
+            </div>
+            <div class="card-2" >
+                <a href="">Help!</a> <br>
+                <a href="">About Google!</a><br>
+                <a href="">Company Info</a><br>
+                <a href="">Google! Logos</a>
+            </div>
+            <div class="card-3">
+                Get Google! <br>
+                updates monthly: <br>
+                <input type="text" value="your e-mail" size="25"><br>
+                <input type="button" value="Subscribe">
+                <a href="">Archive</a>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <!-- Son bölüm Firma Bilgileri -->
+        <div class="content" style="text-align: center;">
+            <p><i>Copyright ©1998 Google Inc.</i></p>
+
+        </div>
+    </div>
 </body>
 </html>
